[fix] Makes Metamask button appear on mobile (#183)
* Makes Metamask button appear on mobile and desktop

* Revert "Makes Metamask button appear on mobile and desktop"

This reverts commit 3c37635f26e4ebfe4ce04c49a14dec538319c132.

* Shows MetaMask button in sidebar on mobile

* Removes unnecessary class names on network widget

--- a/packages/client/src/layout/network-widget.scss
+++ b/packages/client/src/layout/network-widget.scss
@@ -75,6 +75,7 @@
   &.bold {
     background-color: $blue-xlight;
     text-align: center;
+    border: 0;
   }
 
   &.bold:hover {
